# bazel-select-mre

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
